# sparta-mon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sparta_mon.c  sparta_mon_win.c
.github/workflows/: build-amd64-deb.yml  build-windows.yml
apt/: Packages  Release
